test/compile_pass/ufcs_trivial.pine
def add_one n do
  n + 1
end

def main do
  5.add_one
end
